[tool.poetry]
name = "sitemap-parser"
version = "0.1.0"
description = ""
authors = ["Joakim Hellsén <tlovinator@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "sitemap_parser", from = "." }]

[tool.poetry.dependencies]
python = "^3.12"
lxml = "^4.9.3"
python-dateutil = "^2.8.2"
loguru = "^0.7.2"
httpx = { extras = ["http2"], version = "^0.26.0" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pre-commit = "^3.5.0"
pytest-httpx = "^0.26.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.ruff]
fix = true
preview = true
unsafe-fixes = true
select = ["ALL"]
ignore = [
  "D100",
  "D104",
  "CPY001",
  "ERA001",
  "TD002",
  "FIX002",
  "COM812",
  "ISC001",
  "G004",
  "S320",
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"**/tests/**/*.py" = [
  "S101",    # asserts allowed in tests...
  "ARG",     # Unused function args -> fixtures nevertheless are functionally relevant...
  "FBT",     # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
  "PLR6301",
]
